--- a/paper/paper 2/paper 2.tex
+++ b/paper/paper 2/paper 2.tex
@@ -156,7 +156,7 @@
 
 %
 %
-\title{Formulating and Validating RDF Constraints Generically}
+\title{Formulating RDF Constraints and \\ Validating RDF Data Generically}
 %\subtitle{}
 %
 \titlerunning{XXXXX}  % abbreviated title (for running head)
@@ -180,24 +180,27 @@ University of Mannheim, Germany \\
 \begin{abstract}
 
 More and more domains adopt Linked Data principles
-and seek now for ways to ensure data quality by validating RDF data according to constraints, as they are used to have this functionality in the XML world.
-For XML, XML Schema is the standard constraint language to validate XML documents.
-For RDF, however, there are multiple candidates for languages to express constraints on RDF data - but there is no standard language for RDF validation.
-We identified requirements to formulate and validate RDF constraints and mapped each requirement to a constraint type.
+and seek for ways to ensure data quality by validating RDF data according to predefined constraints, 
+particularly as many communities are used to have this functionality in the XML world.
+XML Schema is the standard constraint language to formulate constraints on and to validate XML documents.
+For RDF, however, there are more than 10 candidates for languages to express constraints on RDF data - but no standard one meeting the majority of RDF validation use cases.
+We identified requirements to formulate constraints and to validate RDF data and mapped each requirement to a constraint type.
 The majority of these constraint types can be represented in description logics providing their logical underpinning.
 
-In this paper, we provide a basic terminology and classification system for RDF constraint types,
-we developed a vocabulary describing any RDF constraint type generically (whether expressible in description logics or not),
-we show how to transform \emph{specific constraints} (expressed by any constraint language \ms{$\alpha$}) into \emph{generic constraints} and \emph{specific constraints} (expressed by any other constraint language \ms{$\beta$}), and
-we explain how to provide the validation of any \emph{specific constraint} out-of-the-box. 
+In this paper, we provide a basic terminology and classification system for RDF constraints.
+We developed a vocabulary describing any RDF constraint type generically. 
+%(whether expressible in description logics or not).
+We show how to transform constraints, expressed by any constraint language \ms{$\alpha$}, into generically expressed constraints and into constraints represented by any other constraint language \ms{$\beta$} and why these transformations are useful.
+We explain how to overcome the necessity to implement the validation of each constraint type (for multiple constraint languages) by providing mappings to generically expressed constraints 
 
-\keywords{RDF Validation, RDF Constraints, RDF Validation Requirements, Transformation, Linked Data, Semantic Web}
+\keywords{RDF Validation, RDF Constraints, RDF Validation Requirements, Linked Data, Semantic Web}
 \end{abstract}
 %
 
 % ---------------
 
 \section{Introduction}
+\tb{split introdution and motivation}
 \tb{feedback from Erman: the major problem is semantics. OWL basically work in different semantics than others. And their semantics are formal. Closed world vs. Open World is also a part of this.}
 %The purpose of OWL 2 ontologies is to perform reasoning on RDF data and not to validate RDF data conforming to these ontologies.
 %OWL 2 is based on the {\em non-unique name assumption} (nUNA) whereas RDF validation requires that different names represent different objects ({\em unique name assumption} (UNA)). 
@@ -207,21 +210,22 @@ we explain how to provide the validation of any \emph{specific constraint} out-o
 %For this reason, we cannot use OWL 2 ontologies for RDF validation as we use XML Schemas, DTDs, RELAX NG, or Schematron to validate XML documents.
 
 In 2013, the W3C organized the RDF Validation Workshop\footnote{\url{http://www.w3.org/2012/12/rdf-val/}}, 
-where experts from industry, government, and academia discussed first use cases for RDF constraint formulation and validation.
+where experts from industry, government, and academia discussed first use cases for RDF constraint formulation and RDF data validation.
 In 2014, two working groups on RDF validation have been established to develop a language to express constraints on RDF data: 
-the W3C RDF Data Shapes WG\footnote{\url{http://www.w3.org/2014/rds/charter}} and the DCMI RDF Application Profiles WG\footnote{\url{http://wiki.dublincore.org/index.php/RDF-Application-Profiles}}. 
-Bosch and Eckert \cite{BoschEckert2014} collected the findings of these working groups and initiated a database of requirements to formulate and validate RDF constraints
+the W3C RDF Data Shapes working group\footnote{\url{http://www.w3.org/2014/rds/charter}} and the DCMI RDF Application Profiles task group\footnote{\url{http://wiki.dublincore.org/index.php/RDF-Application-Profiles}}. 
+Bosch and Eckert \cite{BoschEckert2014} collected the findings of these working groups and initiated a database of RDF validation requirements
 which is available for contribution at \url{http://purl.org/net/rdf-validation}.
-The intention associated with this database is to collaboratively collect case studies, use cases, requirements, and solutions regarding RDF validation in a comprehensive and structured way. 
-The requirements are classified to better evaluate existing solutions and each requirement is directly mapped to a constraint type.
+The intention is to collaboratively collect case studies, use cases, requirements, and solutions regarding RDF validation in a comprehensive and structured way. 
+The requirements are classified to better evaluate existing solutions and each requirement is directly mapped to a constraint type which may be expressed by at least one existing constraint language.
 
-\tb{I copied this paragraph from the ESWC paper, we have to modify it}
 Recently, RDF validation as a research field gained speed due to common needs of data practitioners. A typical example is the library domain that co-developed and adopted Linked Data principles very early. For libraries, the common description of resources are key business and they have a long tradition in developing and using interoperable data formats. While they embrace the openness of Linked Data and the data modeling principles provided by RDF, the data is still mostly represented in XML and this is unlikely to change soon. 
 Among the reasons for the success of XML is the possibility to formulate fine-grained constraints to be met by the data and to validate the data according to these constraints using powerful systems like DTDs, XML Schemas, RELAX NG, or Schematron.
 A typical example is the definition of a library record describing a book. There are clear rules which information has to be available to describe a book properly (required fields, like a title), but also how information like an ISBN number is properly represented. Libraries seek to make their own data reusable for general purposes, but also to enrich and interlink their own data. Checking if third-party data meets own requirements or validating existing data according to new needs for a Linked Data application are among common use cases for RDF validation.
 
-There is no constraint language which can be seen as the standard.
-Although, there are multiple constraint languages (having different syntaxes and semantics) which can be used to express RDF constraints (such as existential and universal quantification, cardinality restrictions, and exclusive or of properties).
+\section{Motivation}
+
+There is not one language meeting the majority of requirements to formulate RDF constraints.
+Even though there are more than 10 languages with different syntaxes and semantics which can be used to express RDF constraints (e.g. existential and universal quantification, cardinality restrictions, and exclusive or of properties), the language selection depends on the individual use case.
 The five most promising ones on being the standard are
 \emph{Description Set Profiles (DSP)}\footnote{\url{http://dublincore.org/documents/2008/03/31/dc-dsp/}},
 \emph{Resource Shapes (ReSh)}\footnote{\url{http://www.w3.org/Submission/shapes/}}, 
@@ -508,7 +512,7 @@ The restriction of the datatype \emph{ISBN}, however, cannot be expressed in DL,
 ISBN a RDFS:Datatype ; owl:equivalentClass [ a RDFS:Datatype ;
     owl:onDatatype xsd:string ; owl:withRestrictions ([ xsd:pattern "^\d{9}[\d|X]\$" ])] .
 \end{ex}
-\tb{Erman, can you please delete the slash in front of the dollar sign from the output of the code fragment above (in the stated pattern)?}
+\tb{ToDO: delete the slash in front of the dollar sign from the output of the code fragment above (in the stated pattern)?}
 The first OWL 2 axiom explicitly declares {\em ISBN} to be a datatype. %\er{Why start from second and then first? Also better we say "owl axiom" when we talk axiom of owl, to prevent ambiguity.}\tb{resolved}
 The second OWL 2 axiom defines {\em ISBN} as an abbreviation for a datatype restriction on {\em xsd:string}. 
 The datatype {\em ISBN} can be used just like any other datatype like in the universal restriction above.
@@ -888,7 +892,7 @@ property & Book & isbn & - & - & keyfor & - \\
 \label{sec:transformations}
 
 RDF data providers have to ensure that their data conforms to constraints which are part of explicitly or implicitly concluded contracts between data providers and consumers.
-As there is no standard way, these constraints may be represented by a variety of possible constraint languages (there are even more than the five promising ones\footnote{i.a. Bibframe, Data Quality Test Patterns, Pellet ICV, RDFUnit, SPARQL, Stardog ICV}).
+As there is no standard way, these constraints may be represented by a variety of possible constraint languages (there are even more than the five promising ones\footnote{i.a. Bibframe, DQTP, Pellet ICV, RDFUnit, SPARQL, Stardog ICV}).
 There is an obvious need to transform any \emph{specific constraint} (\emph{$sc_{\alpha}$}) (expressed by any constraint language \emph{$\alpha$}) into any other \emph{specific constraint} (\emph{$sc_{\beta}$}) (expressed by any constraint language \emph{$\beta$}) - when they have the same semantics.
 We use the \emph{RDF-CV} as an intermediate representation vocabulary for these transformations.
 If we define mappings ($m(sc_{\alpha}), m(sc_{\beta})$) between equivalent \emph{specific constraints} and the corresponding \emph{generic constraint} (\emph{gc}),
@@ -1179,7 +1183,7 @@ The majority - nearly 70\% - of the overall constraint types are expressible in 
 
 \section{Conclusion and Future Work}
 
-\tb{Erman, there is too much space before and after DL and table environments / can your resolve that please?}
+\tb{ToDo: there is too much space before and after DL and table environments / can your resolve that please?}
 
 \bibliography{../../literature/literature}{}
 \bibliographystyle{plain}
